[package]
name = "absolute_defence"
version = "0.1.0"
authors = ["Benjamin Cecile <bencecile@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook", "web-sys/console"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
fixedbitset = "0.2.0"
# js-sys = "0.3.35"
rand = "0.7.3"
wasm-bindgen = "0.2.58"

[dependencies.web-sys]
version = "0.3.35"
features = [
    "CanvasRenderingContext2d",
]

[dependencies.getrandom]
version = "*"
features = ["wasm-bindgen"]
